[dependencies]
num-traits = '0.2.8'
quickersort = '3.0.1'
rand = '0.7.0'

[dependencies.mpi]
default-features = false
features = []
git = 'https://github.com/bsteinb/rsmpi.git'

[dependencies.scorus]
path = '../scorus'

[package]
authors = ['Gu Junhua <jhgu@nao.cas.cn>']
name = 'mpi_rsmcmc'
version = '0.1.0'
